# pkg/user/requests.go
@@ -31,6 +31,25 @@ func (c *UserCreateReq) Validate() error {
 	)
 }
 
+type UserUpdateReq struct {
+	Name      *string        `json:"name"`
+	Email     *string        `json:"email"`
+	Password  *string        `json:"password"`
+	Role      *enforcer.Role `json:"role"`
+	FacultyId *int           `json:"facultyId"`
+}
+
+func (c UserUpdateReq) Validate() error {
+	return validation.ValidateStruct(&c,
+		validation.Field(&c.Name, validation.Length(5, 50)),
+		validation.Field(&c.Email, is.Email),
+		validation.Field(&c.Password, validation.Length(5, 50)),
+		validation.Field(&c.Role, validation.In(
+			enforcer.Guest, enforcer.Student, enforcer.MarketingCoordinator, enforcer.MarketingManager, enforcer.Administrator)),
+		validation.Field(&c.FacultyId),
+	)
+}
+
 func isRoleRequiredFaculty(role enforcer.Role) bool {
 	switch role {
 	case enforcer.Administrator:
